added icons and button styling

--- a/app/src/app/app.scss
+++ b/app/src/app/app.scss
@@ -18,3 +18,4 @@
 @import "../theme/fonts.scss";
 @import "../theme/typography.scss";
 @import "../theme/global.scss";
+@import "../theme/objects.scss";
