--- a/app/src/pages/home/home.scss
+++ b/app/src/pages/home/home.scss
@@ -1,5 +1,5 @@
 page-home {
     .content{
-        background-color: color($colors, green);
+        background-color: color($colors, light);
     }
 }
