--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -22,7 +22,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-$font-family-base: 'Yanone Kaffeesatz';
+$font-family-base: 'Lato';
 $headings-font-weight: 200;
 
 
