--- a/app/src/theme/global.scss
+++ b/app/src/theme/global.scss
@@ -22,6 +22,7 @@
 }
 
 .ion-page .content {
+    background-color: rgb(189, 247, 228);
     .scroll-content{
         display: flex;
         flex-direction: column;
@@ -39,7 +40,7 @@
         background-image: url("../assets/imgs/papier.jpg");
         background-size: cover;
         background-position: center center;
-        opacity: 1;
+        opacity: 0.5;
         mix-blend-mode: luminosity;
     }
 }
