--- a/app/src/pages/learning-topics/learning-topics.scss
+++ b/app/src/pages/learning-topics/learning-topics.scss
@@ -1,3 +1,12 @@
 page-learning-topics {
-
+    art-button-round{
+        button{
+            background: color($colors, primary);
+        }
+        &.active{
+            button{
+                background: saturate(color($colors, primary), 25);
+            }
+        }
+    }
 }
