--- a/app/src/components/art-button-rectangle/art-button-rectangle.scss
+++ b/app/src/components/art-button-rectangle/art-button-rectangle.scss
@@ -1,4 +1,5 @@
 art-button-rectangle {
+    padding: 0px 10px;
     button{
         position: relative;
         font-family: 'Lato';
@@ -7,5 +8,10 @@ art-button-rectangle {
         font-weight: normal;
         padding: 10px 18px;
         background: color($colors, danger);
+    }
+    &.back{
+        button{
+            background: color($colors, grey);
+        }
     }
 }
