--- a/app/src/pages/confirm/confirm.scss
+++ b/app/src/pages/confirm/confirm.scss
@@ -1,3 +1,8 @@
 page-confirm {
-
+    h1{
+        margin-bottom: 40px;
+    }
+    &.ion-page .content .scroll-content{
+        justify-content: center;
+    }
 }
