--- a/app/src/components/art-button-rectangle/art-button-rectangle.html
+++ b/app/src/components/art-button-rectangle/art-button-rectangle.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the ArtButtonRectangleComponent component -->
-<button>
-  <div class="line"></div>
-  {{text}}
+<button tappable>
+  <!-- <div class="line"></div> -->
+  <div>{{text}}</div>
 </button>
