--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -24,6 +24,7 @@ $app-direction: ltr;
 
 $font-family-base: 'Lato';
 $headings-font-weight: 200;
+$font-size-base: 16px;
 
 
 // Named Color Variables
