--- a/app/src/components/art-button-rectangle/art-button-rectangle.scss
+++ b/app/src/components/art-button-rectangle/art-button-rectangle.scss
@@ -1,17 +1,69 @@
 art-button-rectangle {
     padding: 0px 10px;
+    button.activated{
+        transform: rotate(1.5deg) translateY(5px);
+    }
+    &.next{
+        position: fixed;
+        z-index: 99;
+        bottom: -30px;
+        right: -50px;
+        left: 55%;
+        transform: rotate(10deg);
+        button{
+            width: 100%;
+            height: 80px;
+            display: flex;
+            flex-direction: column;
+            div{
+                margin-top: 5px;
+                margin-bottom: auto;
+            }
+        }
+    }
     button{
         position: relative;
-        font-family: 'Lato';
+        font-family: 'Yanone Kaffeesatz';
         color: white;
         font-size: 20px;
-        font-weight: normal;
+        font-weight: 500;
         padding: 10px 18px;
-        background: color($colors, danger);
+        background-image: url("../assets/imgs/purple-texture.jpg");
+        background-size: 150vw;
+        box-shadow: 2px 0px 2px 1px rgba(0,0,0,0.3);
+    }
+    &.actualiteiten{
+        button{
+            background-image: url("../assets/imgs/orange-texture.jpg");
+        }
+    }
+    &.jezelf{
+        button{
+            background-image: url("../assets/imgs/green-texture.jpg");
+        }
+    }
+    &.kunstgeschiedenis{
+        button{
+            background-image: url("../assets/imgs/blue-texture.jpg");
+        }
     }
     &.back{
+        z-index: 99;
+        position: fixed;
+        bottom: -30px;
+        right: 55%;
+        left: -50px;
+        transform: rotate(-1deg);
         button{
-            background: color($colors, grey);
+            width: 100%;
+            height: 70px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            div{
+                margin-top: 5px;
+                margin-bottom: auto;
+            }
         }
     }
 }
