--- a/app/src/components/art-button-round/art-button-round.html
+++ b/app/src/components/art-button-round/art-button-round.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the ArtButtonRoundComponent component -->
-<button>
+<button tappable>
   <div class="line"></div>
   {{text}}
   <art-svg [type]="icon"></art-svg>
