--- a/app/src/theme/fonts.scss
+++ b/app/src/theme/fonts.scss
@@ -51,3 +51,17 @@
          url('../assets/fonts/lato-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../assets/fonts/lato-v14-latin-regular.svg#Lato') format('svg'); /* Legacy iOS */
   }
+
+  /* amatic-sc-regular - latin */
+@font-face {
+  font-family: 'Amatic SC';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/amatic-sc-v11-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Amatic SC Regular'), local('AmaticSC-Regular'),
+       url('../assets/fonts/amatic-sc-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/amatic-sc-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/amatic-sc-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/amatic-sc-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/amatic-sc-v11-latin-regular.svg#AmaticSC') format('svg'); /* Legacy iOS */
+}
