--- a/app/src/theme/typography.scss
+++ b/app/src/theme/typography.scss
@@ -7,6 +7,7 @@ p{
 ion-app.ios, ion-app.md {
     font-family: 'Lato';
     font-weight: 300;
+    line-height: 1.4;
 }
 
 h1,h2,h3,h4,h5,button{
@@ -17,8 +18,20 @@ h1,h2,h3,h4,h5,button{
 .button-subtext{
     margin: 0;
     margin-top: 6px;
-    font-size: 12px;
+    font-size: 13px;
     &.active{
         font-weight: normal;
     }
+}
+
+h1{
+    font-family: 'Yanone Kaffeesatz';
+    &.logo{
+        font-family: 'Amatic SC';
+        font-size: 42px;
+    }
+}
+
+li{
+    margin-bottom: 10px;
 }
