--- a/site/src/app/pages/home/home.component.html
+++ b/site/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-  <p>
+  <!-- <p>
     home works!<br>
     {{ (tourStarts$ | async)?.name }}<br>
     {{ (tourStarts$ | async)?.time | date:'fullDate' }}<br>
     {{ (slide$ | async)?.file }}<br>
-  </p>
-  <div class="artwork" [style.background-image]="image$ | async">
+  </p> -->
+  <div class="artwork" [style.background-image]="image$ | async" [class.fade]="fade">
   </div>
 </div>
 
