--- a/app/src/pages/thanks/thanks.scss
+++ b/app/src/pages/thanks/thanks.scss
@@ -1,3 +1,11 @@
 page-thanks {
-
+    .contactForm{
+        ion-item.item{
+            margin-bottom: 10px;
+            background-color: rgba(255,255,255,0.6);
+        }
+        art-button-rectangle{
+            padding: 0;
+        }
+    }
 }
