--- a/app/src/pages/tour/tour.scss
+++ b/app/src/pages/tour/tour.scss
@@ -1,4 +1,43 @@
 page-tour {
+    .instructions{
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0,0,0,0.55);
+        position: absolute;
+        z-index: 99;
+        text-align: right;
+        padding-right: 80px;
+        padding-top: 30px;
+        padding-left: 20px;
+        color: white;
+        font-size: 16px;
+        box-sizing: border-box;
+        -webkit-font-smoothing: antialiased;
+        opacity: 1;
+        transition: opacity 1s ease;
+        &.hidden{
+            opacity: 0;
+            pointer-events: none;
+        }
+        .instruction{
+            display: flex;
+            margin-top: 10px;
+            height: 40px;
+            justify-content: flex-end;
+            align-items: center;
+            margin-bottom: 40px;
+            p{
+                vertical-align: middle;
+                margin: 0;
+                font-weight: bold;
+                &.arrow{
+                    margin-left: 15px;
+                }
+            }
+        }
+    }
     .col{
         text-align: left;
     }
